[package]
name = "Algoritmos"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.9.0-alpha.2"
tui = "0.19.0"
crossterm = "0.28.1"
infinitable = "1.6.0"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "editor"
path = "src/editor_texto.rs"

[[bin]]
name = "grafos"
path = "src/grafos.rs"

[[bin]]
name = "vetor"
path = "src/vetores.rs"

[[bin]]
name = "multiplicacao"
path = "src/multiplicacao_inteiros.rs"
