[package]
name = "Algoritmos"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.9.0-alpha.2"
tui = "0.19.0"
crossterm = "0.28.1"
infinitable = "1.6.0"
ndarray = "0.16.1"
plotlib = "0.5.1"
plotters = "0.3.7"
gif = "0.13.1"
crossbeam = "0.3.2"
csv = "1.3.1"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "editor"
path = "src/editor_texto.rs"

[[bin]]
name = "grafos"
path = "src/grafos.rs"

[[bin]]
name = "vetor"
path = "src/vetores.rs"

[[bin]]
name = "multiplicacao"
path = "src/multiplicacao_inteiros.rs"

[[bin]]
name = "bootstrap"
path = "src/bootstrap.rs"
